feat: implement AOP logging for API calls and service layer
- Add ApiLoggingAspect for controller layer
- Add LoggingAspect for service layer
- Use IN_HTTP_CALL flag to prevent duplicate logging between layers
- Implement SafeLog with phone number masking
- Add toString() methods to DTOs for structured log output
- Log correlation ID  for request tracing
- Add ErrorCode enum to codify each ErrorResponse type

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,8 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.h2.console.settings.web-allow-others=false
+
+# Logging Configuration
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS} [%X{correlationId}] %-5level [%thread] %logger{36} - %msg%n
+logging.level.com.userapi.registration=DEBUG
+logging.level.com.userapi.registration.aspect=DEBUG
