feat: Add OpenAPI documentation and improve user entity management
- Integrated SpringDoc OpenAPI for API documentation with Swagger UI.
- Added OpenAPI specification file for user registration API.
- Updated User, UserResponse, and UserRegistrationRequest classes to use Lombok for boilerplate code reduction.
- Enhanced UserService to utilize builder pattern for user creation.
- Updated application properties for OpenAPI configuration.
- Refactored tests to use builder pattern for creating test objects.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,10 @@ spring.h2.console.settings.web-allow-others=false
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS} [%X{correlationId}] %-5level [%thread] %logger{36} - %msg%n
 logging.level.com.userapi.registration=DEBUG
 logging.level.com.userapi.registration.aspect=DEBUG
+
+# SpringDoc OpenAPI Configuration
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operationsSorter=method
+springdoc.api-docs.resolve-schema-properties=true
+openapi.spec.path=classpath:openapi.yaml
